@@ -22,9 +22,8 @@
     <camunda.version.ee>7.18.0-ee</camunda.version.ee>
 
     <spring-boot.version>2.7.5</spring-boot.version>
-    <groovy.version>2.4.21</groovy.version>
     <spin.version>1.18.0</spin.version>
-    <camunda-assert.version>15.0.0</camunda-assert.version>
+    <camunda-assert.version>${camunda.version.ce}</camunda-assert.version>
 
     <kotlin.version>1.7.21</kotlin.version>
     <jgiven.version>1.2.4</jgiven.version>
@@ -32,7 +31,7 @@
 
     <kotlin-logging.version>3.0.4</kotlin-logging.version>
     <mockito-kotlin.version>4.1.0</mockito-kotlin.version>
-    <camunda-platform-7-mockito.version>6.17.1</camunda-platform-7-mockito.version>
+    <camunda-platform-7-mockito.version>6.18.0</camunda-platform-7-mockito.version>
 
     <pattern.class.itest>**/*ITest.*</pattern.class.itest>
     <pattern.package.itest>**/itest/**/*.*</pattern.package.itest>
@@ -45,7 +44,7 @@
 
   <modules>
     <module>extension/core</module>
-    <module>extension/test</module>
+    <module>extension/c7</module>
   </modules>
 
   <dependencyManagement>
@@ -71,12 +70,6 @@
         <groupId>io.github.microutils</groupId>
         <artifactId>kotlin-logging-jvm</artifactId>
         <version>${kotlin-logging.version}</version>
-        <exclusions>
-          <exclusion>
-            <groupId>org.jetbrains.kotlin</groupId>
-            <artifactId>kotlin-stdlib</artifactId>
-          </exclusion>
-        </exclusions>
       </dependency>
 
       <dependency>
@@ -97,19 +90,23 @@
       <dependency>
         <groupId>org.camunda.community.mockito</groupId>
         <artifactId>camunda-platform-7-mockito</artifactId>
-        <scope>test</scope>
         <version>${camunda-platform-7-mockito.version}</version>
+        <scope>test</scope>
+        <exclusions>
+          <exclusion>
+            <groupId>io.holunda.data</groupId>
+            <artifactId>camunda-bpm-data</artifactId>
+          </exclusion>
+          <exclusion>
+            <groupId>io.holunda.data</groupId>
+            <artifactId>camunda-bpm-data-test</artifactId>
+          </exclusion>
+        </exclusions>
       </dependency>
       <dependency>
         <groupId>org.camunda.bpm.springboot</groupId>
         <artifactId>camunda-bpm-spring-boot-starter-test</artifactId>
-        <version>${camunda.version}</version>
-        <scope>test</scope>
-      </dependency>
-      <dependency>
-        <groupId>org.camunda.bpm.assert</groupId>
-        <artifactId>camunda-bpm-assert</artifactId>
-        <version>${camunda-assert.version}</version>
+        <version>${camunda.version.ce}</version>
         <scope>test</scope>
       </dependency>
       <dependency>
@@ -138,8 +135,8 @@
     </dependency>
 
     <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
+      <groupId>org.junit.jupiter</groupId>
+      <artifactId>junit-jupiter-api</artifactId>
       <scope>test</scope>
     </dependency>
 
@@ -312,7 +309,7 @@
             </excludes>
             <!-- Sets the VM argument line used when unit tests are run. -->
             <!-- prevent the annoying ForkedBooter process from stealing window focus on Mac OS -->
-            <argLine>-Djava.awt.headless=true ${argLine} -XX:+StartAttachListener -Xmx1024m -XX:MaxPermSize=256m</argLine>
+            <argLine>-Djava.awt.headless=true @{argLine} -XX:+StartAttachListener</argLine>
             <systemPropertyVariables>
               <jgiven.report.dir>${project.build.directory}/jgiven-reports</jgiven.report.dir>
             </systemPropertyVariables>
@@ -544,7 +541,7 @@
           <dependency>
             <groupId>org.camunda.bpm.springboot</groupId>
             <artifactId>camunda-bpm-spring-boot-starter-webapp</artifactId>
-            <version>${camunda.version}</version>
+            <version>${camunda.version.ce}</version>
           </dependency>
         </dependencies>
       </dependencyManagement>
@@ -571,7 +568,7 @@
           <dependency>
             <groupId>org.camunda.bpm.springboot</groupId>
             <artifactId>camunda-bpm-spring-boot-starter-webapp-ee</artifactId>
-            <version>${camunda.version}</version>
+            <version>${camunda.version.ee}</version>
           </dependency>
         </dependencies>
       </dependencyManagement>
